--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,22 +13,23 @@ jobs:
       - name: set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: "3.10"
       - name: set up node  # we need node for for semantic release
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v4
         with:
-          node-version: 14.2.0
+          node-version: 22.2.0
       - name: install python dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
           pip install -r dev-requirements.txt
+          pip install .
       - name: install semantic-release
         run:
           npm install @semantic-release/exec
       - name: run semantic release
-        run:
-          npx semantic-release@^17.0.0
+        id: new_release
+        run: |
+          nextRelease="`npx semantic-release@^23.1.1 --dryRun | grep -oP 'Published release \K.*? ' || true`"
+          npx semantic-release@^23.1.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PYPI_USERNAME: ${{ secrets.POLLINATION_PYPI_USERNAME }}
